Bug 377760 - Cannot turn off Outbox tab in 4.8.0.
Summary: Cannot turn off Outbox tab in 4.8.0.
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-18 08:22 UTC by kdemeoz
Modified: 2018-02-12 13:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kdemeoz 2017-03-18 08:22:54 UTC
A while back [4.7.1] i queried how to turn off the Outbox tab viewtopic.php?f=69&t=123505&p=326478&hilit=outbox#p326467 . The method that worked back then was to deselect the KBanking plugin & restart KMM. In 4.8.0 this Outbox tab has reappeared, but this time i cannot turn it off by deselecting the KBanking plugin & restarting. Is this a bug, or is there a different way now to get rid of it pls?

I also asked here: https://forum.kde.org/viewtopic.php?f=69&t=136281&p=373485#p373485

.............................
Maui 17.03 x64 Plasma 5.9.3. 
.............................
Comment 1 kdemeoz 2018-02-12 07:10:20 UTC
Updated this OLD [but unsolved] bug report now for KMM 5.0. The same bug persists. I still cannot [apparently] stop the Outbox tab appearing. My recent post = https://forum.kde.org/viewtopic.php?f=69&t=151032&p=394667#p394667
Comment 2 Thomas Baumgart 2018-02-12 11:28:51 UTC
I just added a proposed fix at https://phabricator.kde.org/D10457
Comment 3 Thomas Baumgart 2018-02-12 13:55:59 UTC
Git commit a1c8097e290685c8de719e9ce802414337f63474 by Thomas Baumgart.
Committed on 12/02/2018 at 13:55.
Pushed by tbaumgart into branch '5.0'.

Remove online job view if not needed

Summary:
In case no online job plugin is available, the online job view is not
needed. This change removes the view from the application in case no
online plugin is active at startup of the application.
FIXED-IN: 5.0.1

Test Plan: Disable KBanking and OFX plugin and check that page is not shown. Enable at least one of them to have the page back after the next application start.

Reviewers: wojnilowicz

Reviewed By: wojnilowicz

Differential Revision: https://phabricator.kde.org/D10457

M  +19   -6    kmymoney/views/kmymoneyview.cpp

https://commits.kde.org/kmymoney/a1c8097e290685c8de719e9ce802414337f63474